Don't try to use backtrace() on MIPS https://bugs.webkit.org/show_bug.cgi?id=202196

Reviewed by Carlos Garcia Campos.

backtrace() on mips seems to always return 1 on mips/glibc (I tried
with buildroot, debian stable and debian testing, with and without
libunwind), which renders it useless and breaks a RELEASE_ASSERT in
StackTrace::captureStackTrace().

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/215900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250516 268f45cc-cd09-0410-ab3c-d52691b4dbfc